# needle-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  release.yaml
needle/: utils.py
needle/v1/: __init__.py  models.py
needle/v1/collections/: __init__.py  files.py
needle/v1/files/: __init__.py
tutorials/: collections.ipynb  files.ipynb  needle.ipynb
