[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "needle-python"
version = "0.1.4"
description = "Needle client library for Python"
authors = [
    "Onur Eken <m.onureken@gmail.com>",
    "Jan Heimes <heimesjan9@gmail.com>",
]
readme = "README.md"
packages = [{ include = "needle" }]
license = "MIT"
keywords = [
    "needle",
    "api",
    "retrieval-augmented generation",
    "rag",
    "information-retrieval",
    "artificial intelligence",
    "ai",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
homepage = "https://needle-ai.com"
documentation = "https://docs.needle-ai.com"
repository = "https://github.com/oeken/needle-python"
issues = "https://github.com/oeken/needle-python/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
openai = "^1.39.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
